--- a/lec4_97.md
+++ b/lec4_97.md
@@ -7,6 +7,5 @@
 
 ![](lec4_97_ris_1.jpg)
 
-Распределенные многопользовательские приложения могут модифицировать таблицы базы данных и взаимодействовать даже на другие сущности, не имеющие отношения к базам данных, например на очереди сообщений. Транзакции реализуют простой механизм выполнения операции по принципу "все или ничего". Операция считается выполненной только при успешной модификации всех участвующих в ней объектов, а при неудачном изменении одного из них вся операция отменяется.
+<!-- _footer: источник *Частное Боровское исследовательское учреждение по внедрению новых технологий [Электронный ресурс]. - Режим доступа: http://bourabai.ru/alg/com.htm (дата обращения: 23.03.2020)*>
 
-*Частное Боровское исследовательское учреждение по внедрению новых технологий [Электронный ресурс]. - Режим доступа: http://bourabai.ru/alg/com.htm (дата обращения: 23.03.2020)*
