--- a/lec4_79.md
+++ b/lec4_79.md
@@ -1,22 +1,23 @@
-from socket import *<br>
-host = 'localhost'<br>
-port = 777<br>
-addr = (host,port)<br>
-***#socket - функция создания сокета <br>***
-***#первый параметр socket_family может быть AF_INET или AF_UNIX<br>***
-***#второй параметр socket_type может быть SOCK_STREAM(для TCP) или SOCK_DGRAM(для UDP)<br>***
-udp_socket = socket(AF_INET, SOCK_DGRAM)<br>
-***#bind - связывает адрес и порт с сокетом<br>***
-udp_socket.bind(addr)<br>
-***#Бесконечный цикл работы программы<br>***
-while True:<br>
-***&#160;&#160;&#160;&#160;#Если мы захотели выйти из программы<br>***
-&#160;&#160;&#160;&#160;question = input('Do you want to quit? y\\n: ')<br>
-&#160;&#160;&#160;&#160;if question == 'y': break<br>
-&#160;&#160;&#160;&#160;print('wait data...')<br>
-***&#160;&#160;&#160;&#160;#recvfrom - получает UDP сообщения<br>***
-&#160;&#160;&#160;&#160;conn, addr = udp_socket.recvfrom(1024)<br>
-&#160;&#160;&#160;&#160;print('client addr: ', addr)<br>
-***&#160;&#160;&#160;&#160;#sendto - передача сообщения UDP<br>***
-&#160;&#160;&#160;&#160;udp_socket.sendto(b'message received by the server', addr)<br>
+**from socket import *
+host = 'localhost'
+port = 777
+addr = (host,port)
+#socket - функция создания сокета 
+#первый параметр socket_family может быть AF_INET или AF_UNIX
+#второй параметр socket_type может быть SOCK_STREAM(для TCP) или SOCK_DGRAM(для UDP)
+udp_socket = socket(AF_INET, SOCK_DGRAM)
+#bind - связывает адрес и порт с сокетом
+udp_socket.bind(addr)
+#Бесконечный цикл работы программы
+while True:
+    #Если мы захотели выйти из программы
+    question = input('Do you want to quit? y\\n: ')
+    if question == 'y': break
+    print('wait data...')
+    #recvfrom - получает UDP сообщения
+    conn, addr = udp_socket.recvfrom(1024)
+    print('client addr: ', addr)
+    #sendto - передача сообщения UDP
+    udp_socket.sendto(b'message received by the server', addr)
 udp_socket.close()
+
