--- a/lec4_78,1.md
+++ b/lec4_78,1.md
@@ -12,9 +12,9 @@ conn, addr = sock.accept()**
 **print 'connected:', addr**
 
 **while True  
-    data = conn.recv(1024)  
-    if not data:  
-        break  
-    conn.send(data.upper())**
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;data = conn.recv(1024)  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if not data:  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;conn.send(data.upper())**
 
 **conn.close()**
