--- a/lec4_79.md
+++ b/lec4_79.md
@@ -1,24 +1,24 @@
 **from socket import *  
 host = 'localhost'
 
-port = 777  
+**port = 777  
 addr = (host,port)  
 #socket - функция создания сокета  
-#первый параметр socket_family может быть AF_INET или AF_UNIX  
-#второй параметр socket_type может быть SOCK_STREAM(для TCP) или SOCK_DGRAM(для UDP)  
-udp_socket = socket(AF_INET, SOCK_DGRAM)  
-#bind - связывает адрес и порт с сокетом  
+***#первый параметр socket_family может быть AF_INET или AF_UNIX  
+#второй параметр socket_type может быть SOCK_STREAM(для TCP) или SOCK_DGRAM(для UDP)***  
+**udp_socket = socket(AF_INET, SOCK_DGRAM)  
+***#bind - связывает адрес и порт с сокетом  ***
 udp_socket.bind(addr)  
-#Бесконечный цикл работы программы  
-while True:  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#Если мы захотели выйти из программы   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;question = input('Do you want to quit? y\\n: ')    
+***#Бесконечный цикл работы программы***
+**while True:**  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;***#Если мы захотели выйти из программы***   
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**question = input('Do you want to quit? y\\n: ')    
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if question == 'y': break   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print('wait data...')   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#recvfrom - получает UDP сообщения   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;conn, addr = udp_socket.recvfrom(1024)   
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;***#recvfrom - получает UDP сообщения***   
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**conn, addr = udp_socket.recvfrom(1024)   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print('client addr: ', addr)  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#sendto - передача сообщения UDP  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;udp_socket.sendto(b'message received by the server', addr)    
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;***#sendto - передача сообщения UDP***  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**udp_socket.sendto(b'message received by the server', addr)      
 udp_socket.close()
 
