--- a/lec4_79.md
+++ b/lec4_79.md
@@ -1,7 +1,7 @@
-**from socket import  
-host = 'localhost'  
-port = 777  
-addr = (host,port)  
+**from socket import**  
+**host = 'localhost'**  
+**port = 777**  
+**addr = (host,port)**  
 #socket - функция создания сокета  
 ***#первый параметр socket_family может быть AF_INET или AF_UNIX  
 #второй параметр socket_type может быть SOCK_STREAM(для TCP) или SOCK_DGRAM(для UDP)***  
