--- a/lec4_79.md
+++ b/lec4_79.md
@@ -13,7 +13,7 @@ udp_socket.bind(addr)
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;***#Если мы захотели выйти из программы***   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**question = input('Do you want to quit? y\\n: ')    
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if question == 'y': break   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print('wait data...')   
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print('wait data...')**   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;***#recvfrom - получает UDP сообщения***   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**conn, addr = udp_socket.recvfrom(1024)   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print('client addr: ', addr)  
