--- a/lec4_79.md
+++ b/lec4_79.md
@@ -18,6 +18,6 @@ udp_socket.bind(addr)
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**conn, addr = udp_socket.recvfrom(1024)   
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print('client addr: ', addr)**  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;***#sendto - передача сообщения UDP***  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**udp_socket.sendto(b'message received by the server', addr)      
+**&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;udp_socket.sendto(b'message received by the server', addr)      
 udp_socket.close()
 
