--- a/lec4_79.md
+++ b/lec4_79.md
@@ -19,5 +19,5 @@ udp_socket.bind(addr)
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print('client addr: ', addr)**  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;***#sendto - передача сообщения UDP***  
 **&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;udp_socket.sendto(b'message received by the server', addr)      
-udp_socket.close()
+udp_socket.close()**
 
